[gd_scene load_steps=8 format=3 uid="uid://bik0pcsna2adb"]

[ext_resource type="Script" path="res://scripts/hunt_timer.gd" id="1_0adjy"]
[ext_resource type="Texture2D" uid="uid://cqkqppycqfmdj" path="res://sprites/TimeIndicator.png" id="2_pow8m"]
[ext_resource type="Texture2D" uid="uid://cpg80k1507rv" path="res://sprites/TimeBar.png" id="3_tw6cn"]
[ext_resource type="Texture2D" uid="uid://bw7pr5640layh" path="res://sprites/TimePlaceholder.png" id="4_osfow"]
[ext_resource type="Script" path="res://Scenes/UI_Scenes/Scripts/StartButton.gd" id="5_7hq84"]
[ext_resource type="AudioStream" uid="uid://btg5q4fagb7so" path="res://Sounds/Timer/demon_timer_ending_in.mp3" id="6_pqhjw"]

[sub_resource type="LabelSettings" id="LabelSettings_2vvqo"]

[node name="HuntTimer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0adjy")
metadata/_edit_horizontal_guides_ = [48.0, 100.0]
metadata/_edit_vertical_guides_ = [216.0]

[node name="NodeTimeIndicator" type="Node2D" parent="."]
position = Vector2(204, 60)

[node name="TimeIndicator" type="Sprite2D" parent="NodeTimeIndicator"]
z_index = 2
position = Vector2(-0.5, 3)
scale = Vector2(0.325, 1)
texture = ExtResource("2_pow8m")

[node name="TimeCurrent" type="RichTextLabel" parent="NodeTimeIndicator"]
offset_left = -36.0
offset_top = -37.0
offset_right = 20.0
offset_bottom = -13.0
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "0:25:00"
scroll_active = false

[node name="HuntTimerHeader" type="Label" parent="."]
layout_mode = 0
offset_right = 112.0
offset_bottom = 23.0
text = "Hunt Timer"
label_settings = SubResource("LabelSettings_2vvqo")

[node name="TimeBar" type="Sprite2D" parent="."]
self_modulate = Color(0.431373, 0.431373, 0.431373, 1)
position = Vector2(116, 63)
scale = Vector2(1, 1.28)
texture = ExtResource("3_tw6cn")

[node name="BeginPlaceholder" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(203.5, 63)
scale = Vector2(0.325, 1)
texture = ExtResource("4_osfow")

[node name="DemonPlaceholder" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(56, 64)
scale = Vector2(0.325, 1)
texture = ExtResource("4_osfow")

[node name="StandardPlaceholder" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(16, 64)
scale = Vector2(0.325, 1)
texture = ExtResource("4_osfow")

[node name="3Min" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 80.0
offset_right = 224.0
offset_bottom = 96.0
theme_override_font_sizes/normal_font_size = 12
text = "Begin"
scroll_active = false

[node name="Demon - 2Min" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 80.0
offset_right = 76.0
offset_bottom = 97.0
theme_override_font_sizes/normal_font_size = 12
text = "Demon"
autowrap_mode = 0

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 104.0
offset_right = 215.0
offset_bottom = 135.0
text = "Start Timer"
script = ExtResource("5_7hq84")

[node name="timerCountdown" type="Timer" parent="."]
wait_time = 180.0
one_shot = true

[node name="TimerAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 4)
stream = ExtResource("6_pqhjw")

[node name="devTestSound" type="Button" parent="."]
visible = false
layout_mode = 0
offset_top = 568.0
offset_right = 96.0
offset_bottom = 599.0
text = "Test"

[connection signal="pressed" from="StartButton" to="." method="_on_button_pressed"]
[connection signal="timeout" from="timerCountdown" to="." method="_on_timer_countdown_timeout"]
[connection signal="pressed" from="devTestSound" to="." method="_on_dev_test_sound_pressed"]
